--- a/app/assets/javascripts/admin/addon/templates/backups-index.hbs
+++ b/app/assets/javascripts/admin/addon/templates/backups-index.hbs
@@ -8,7 +8,11 @@
       title="admin.backups.upload.title"
       class="btn-default"}}
   {{else}}
-    {{backup-uploader done=(route-action "remoteUploadSuccess")}}
+    {{#if enableExperimentalBackupUploader}}
+      {{uppy-backup-uploader done=(route-action "remoteUploadSuccess") type="backup"}}
+    {{else}}
+      {{backup-uploader done=(route-action "remoteUploadSuccess")}}
+    {{/if}}
   {{/if}}
 
   {{#if site.isReadOnly}}
