--- a/app/assets/javascripts/admin/addon/templates/api-keys-new.hbs
+++ b/app/assets/javascripts/admin/addon/templates/api-keys-new.hbs
@@ -40,7 +40,7 @@
       {{combo-box content=scopeModes value=scopeMode onChange=(action "changeScopeMode")}}
 
       {{#if (eq scopeMode "read_only")}}
-        <p>{{i18n "admin.api.scopes.read_only_description"}}</p>
+        <p>{{i18n "admin.api.scopes.descriptions.global.read"}}</p>
       {{else if (eq scopeMode "global")}}
         <p>{{i18n "admin.api.scopes.global_description"}}</p>
       {{/if}}
